[package]
name = "r2con"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MPL-2.0"
description = "A short description of my package"
repository = "https://github.com/Vincentvibe3/r2con"
keywords = ["RCON", "minecraft"]

[dependencies]
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
tokio = { version = "1", features = ["full"] }

[lib]
name = "r2con_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "r2con"
path = "src/bin/main.rs"
