[package]
name = "r2con-cli"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MPL-2.0"
description = "An RCON client for minecraft"
repository = "https://github.com/Vincentvibe3/r2con"
keywords = ["RCON", "minecraft"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }
r2con = { version = "0.1.0", path = "../r2con-lib" }