[package]
name = "r2con"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MPL-2.0"
description = "An RCON client for minecraft"
repository = "https://github.com/Vincentvibe3/r2con"
keywords = ["RCON", "minecraft"]

[dependencies]
bytes = "1.9.0"
rand = { version = "0.8.5", features = ["small_rng"] }
tokio = { version = "1", features = ["full"] }
